src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Billing Process</fullName>
        <isActive>false</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - First Call</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Cirrus - Simplified Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Cirrus Support Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Assigned</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Waiting for COE</fullName>
        </values>
        <values>
            <fullName>Waiting for Employee</fullName>
        </values>
        <values>
            <fullName>Waiting for HRBP</fullName>
        </values>
        <values>
            <fullName>Waiting for Vendor</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>General Inquiry</fullName>
        <description>Basic Support Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - First Call</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Technical Issue</fullName>
        <isActive>false</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - First Call</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>CSAT__c</fullName>
        <description>Added specifically for use by the Service Wave Analytics dashboard.</description>
        <label>CSAT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Survey_URL__c</fullName>
        <formula>LEFT($Api.Enterprise_Server_URL_300, FIND(&apos;/services&apos;,$Api.Enterprise_Server_URL_300)) + &apos;/apex/DE_CustomerSurvey&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Survey URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Case_Duration_Hours__c</fullName>
        <label>DB Case Duration Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DB_Hours__c</fullName>
        <description>This is used for the &quot;Perfect Data&quot; SE tool</description>
        <label>DB Hours</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DateTime_Closed_c__c</fullName>
        <label>DateTime Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateTime_Opened_c__c</fullName>
        <label>DateTime Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>8*(IF( ISNULL( DateTime_Closed_c__c ), NOW() - DateTime_Opened_c__c , DateTime_Closed_c__c - DateTime_Opened_c__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Contact_Close__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Used to mark cases that are closed on first contact, without requiring additional engagement with the customer.  Off by default.  Driven by workflow rule.</description>
        <label>First Contact Close</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Indicator__c</fullName>
        <formula>IMAGE(CASE(Status, 
&quot;New&quot;, &quot;/resource/Case_Indicator/Status-New.png&quot;, 
&quot;Escalated&quot;, &quot;/resource/Case_Indicator/Status-Escalated.png&quot;, 
&quot;On Hold&quot;, &quot;/resource/Case_Indicator/Status-Researching.png&quot;, 
&quot;Closed&quot;, &quot;/resource/Case_Indicator/Status-Closed.png&quot;, 
&quot;/resource/Case_Indicator/Status-Responded.png&quot;),&quot;&quot;,18,18)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Payment__c</fullName>
        <label>Last Payment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Billing__c</fullName>
        <label>Payment Billing</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Private_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A private case is only visible to the person who is working on the case (assigned owner), the case contact and any users who have been added to the case team.</inlineHelpText>
        <label>Private Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Product.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_Compliant__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is used by the &quot;SLA Compliance&quot; dashboard on the Service Executive dashboard. It is checked by default, and unchecked when a case misses a milestone.</description>
        <label>SLA Compliant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <formula>IMAGE(CASE(Origin,
&quot;Chatter Answers&quot;, &quot;/resource/Case_Source/chatter_answers_logo.png&quot;, 
&quot;Email&quot;, &quot;/resource/Case_Source/email_icon.png&quot;, 
&quot;Phone&quot;, &quot;/resource/Case_Source/phone_icon.png&quot;, 
&quot;Facebook&quot;, &quot;/resource/Case_Source/facebook_icon.png&quot;, 
&quot;Twitter&quot;, &quot;/resource/Case_Source/twitter_icon.png&quot;, 
&quot;Website&quot;, &quot;/resource/Case_Source/website_icon.png&quot;, 
&quot;Google&quot;, &quot;/resource/Case_Source/google.gif&quot;, 
&quot;Chat&quot;, &quot;/resource/Case_Source/chat_icon.png&quot;, 
&quot;Portal&quot;, &quot;/resource/Case_Source/website_icon.png&quot;, 
&quot;/resource/Case_Source/website_icon.png&quot;),&quot;&quot;,18,18)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub Type</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Promotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dependent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing ID Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrollment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verbal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Termination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Support__c</fullName>
        <label>Type of Support</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>external_id__c</fullName>
        <description>used for datapacks</description>
        <label>external id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>isthismycase__c</fullName>
        <description>Use this to create a list view for community users cases</description>
        <formula>ContactId = $User.ContactId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Use this to create a list view for community users cases</inlineHelpText>
        <label>isthismycase</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>Benefits_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Benefits</label>
        <queue>Benefits</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Compensation_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Compensation</label>
        <queue>Compensation</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Employee_Relations_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Employee Relations</label>
        <queue>Employee_Relations</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>General_HR_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>General HR</label>
        <queue>General_HR</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Holding_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Holding_Queue</label>
        <queue>Holding_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Manager_Requests_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Manager Requests</label>
        <queue>Manager_Requests</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Indicator__c</columns>
        <columns>Source__c</columns>
        <columns>CASES.ESCALATION_STATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <role>CEO</role>
            <role>Channel_Sales</role>
            <role>HR</role>
            <role>Sales</role>
            <role>Service</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCasesCustomer</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <filterScope>Everything</filterScope>
        <label>My Cases (PreHire)</label>
    </listViews>
    <listViews>
        <fullName>MyCommunityCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Indicator__c</columns>
        <columns>Source__c</columns>
        <columns>CASES.ESCALATION_STATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>isthismycase__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Community Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Indicator__c</columns>
        <columns>Source__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Payroll_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Payroll</label>
        <queue>Payroll</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Payroll_Tier_2_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Payroll Tier 2</label>
        <queue>Payroll_Tier_2</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Tier_1_Queue</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Source__c</columns>
        <filterScope>Queue</filterScope>
        <label>Tier 1 Queue</label>
        <queue>Tier_1_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Tier_2_Queue</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Source__c</columns>
        <filterScope>Queue</filterScope>
        <label>Tier 2 Queue</label>
        <queue>Tier_2_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Tier_3_Queue</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Source__c</columns>
        <filterScope>Queue</filterScope>
        <label>Tier 3 Queue</label>
        <queue>Tier_3_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Benefits</fullName>
        <active>true</active>
        <businessProcess>General Inquiry</businessProcess>
        <description>Use this case for benefits issues or inquiries</description>
        <label>Benefits</label>
    </recordTypes>
    <recordTypes>
        <fullName>Billing_Inquiry</fullName>
        <active>false</active>
        <businessProcess>Billing Process</businessProcess>
        <description>Customer billing questions.</description>
        <label>Billing Inquiry</label>
    </recordTypes>
    <recordTypes>
        <fullName>Complaint</fullName>
        <active>true</active>
        <businessProcess>General Inquiry</businessProcess>
        <description>Use this for complaints or grievances</description>
        <label>Complaint</label>
    </recordTypes>
    <recordTypes>
        <fullName>General_Inquiry</fullName>
        <active>true</active>
        <businessProcess>General Inquiry</businessProcess>
        <description>Use this for general HR questions that don&apos;t fit into the other categories</description>
        <label>General HR</label>
    </recordTypes>
    <recordTypes>
        <fullName>Manager_Request</fullName>
        <active>true</active>
        <businessProcess>General Inquiry</businessProcess>
        <description>Use this for manager requests</description>
        <label>Manager Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Payroll</fullName>
        <active>true</active>
        <businessProcess>General Inquiry</businessProcess>
        <description>Use this case for payroll issues or inquiries</description>
        <label>Payroll</label>
    </recordTypes>
    <recordTypes>
        <fullName>Technical_Issue</fullName>
        <active>false</active>
        <businessProcess>Technical Issue</businessProcess>
        <description>Technical investigations and troubleshooting</description>
        <label>Technical Issue</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>